--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "build:client": "cd ../client && npm run build",
+    "build:all": "npm run build:client && npm run build",
+    "start:prod": "NODE_ENV=production npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
