--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "start": "node dist/index.js",
     "build:client": "cd ../client && npm run build",
     "build:all": "npm run build:client && npm run build",
-    "start:prod": "NODE_ENV=production npm start",
+    "start:prod": "cross-env NODE_ENV=production npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
