--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "concurrently": "^9.1.0",
     "cross-env": "^7.0.3"
+  },
+  "dependencies": {
+    "react-router-dom": "^7.6.2"
   }
 }
