--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "build:client": "cd ../client && npm run build",
     "build:all": "npm run build:client && npm run build",
     "start:prod": "cross-env NODE_ENV=production npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.15.33",
+    "jest": "^30.0.3",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
