--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,7 +21,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
   "include": [
     "src/**/*"
