--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+
+    "dev:db": "docker compose up -d",
+    "dev:all": "npm run dev:db && npm run dev",
+
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
     "build": "npm run build:client && npm run build:server",
