--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.14.1"
   },
   "devDependencies": {
     "@types/benchmark": "^2.1.5",
