--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,16 @@ DB_HOST=40.311.321.12
 DB_USER=admin
 DB_PASSWORD=yourStrongPassword
 DB_NAME=db_name
+
+# Authentication
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+CLIENT_URL=http://localhost:5173
+
+# OAuth (optional - for social login)
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+FACEBOOK_APP_ID=your-facebook-app-id
+FACEBOOK_APP_SECRET=your-facebook-app-secret
+APPLE_TEAM_ID=your-apple-team-id
+APPLE_KEY_ID=your-apple-key-id
+APPLE_PRIVATE_KEY=your-apple-private-key
