--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^3.0.0",
     "@types/benchmark": "^2.1.5",
     "@types/cookie-parser": "^1.4.9",
