--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,14 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/validator": "^13.15.2",
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
