--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,8 @@
     "passport-apple": "^2.0.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -48,6 +49,7 @@
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/validator": "^13.15.2",
     "benchmark": "^2.1.4",
     "jest": "^30.0.3",
     "ts-jest": "^29.4.0",
