--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,9 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -50,6 +52,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/validator": "^13.15.2",
+    "@types/winston": "^2.4.4",
     "benchmark": "^2.1.4",
     "jest": "^30.0.3",
     "ts-jest": "^29.4.0",
